# CompassMind

./: .gitignore  EDGE_PLAN.md  ERROR_ANALYSIS.md  README.md  predictions.csv  pyproject.toml  requirements.txt
compassmind/: __init__.py  __main__.py  cli.py  constants.py  decision.py  demo_api.py  features.py  pdf_parse.py  predict.py  schemas.py  seed.py  text.py  train_eval.py  uncertainty.py
compassmind/evaluation/: __init__.py  __main__.py  attribution.py  errors.py  holdout.py  metrics.py  robustness.py  run.py
compassmind/ingestion/: __init__.py  constants.py  csv_io.py  pdf_io.py  pipeline.py  preprocess.py  schema.py
outputs/: predictions.csv
tests/: test_cli.py  test_decision.py  test_e2e_pipeline.py  test_evaluation.py  test_features.py  test_ingestion.py  test_pdf_parse.py  test_predict_intensity.py  test_predict_output.py  test_seed.py  test_timing_compliance.py  test_train_bundle_smoke.py  test_uncertainty.py
